// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nunjucks component \`AlternateUrls()\` should print proper meta tag 1`] = `
"
      
      


<link rel='alternate' hreflang='en-US' href='https://kotsu.2bad.me/en/mockContext' >



    "
`;

exports[`Nunjucks component \`AlternateUrls()\` should print proper meta tag for language only 1`] = `
"
      
      


<link rel='alternate' hreflang='en' href='https://kotsu.2bad.me/en/mockContext' >



    "
`;

exports[`Nunjucks component \`AlternateUrls()\` should print proper meta tag for language only when locale is default for its language 1`] = `
"
      
      


<link rel='alternate' hreflang='en' href='https://kotsu.2bad.me/en/mockContext' >



    "
`;

exports[`Nunjucks component \`AlternateUrls()\` should print proper meta tag with absolute url specified 1`] = `
"
      
      


<link rel='alternate' hreflang='en-US' href='https://test.dev' >



    "
`;

exports[`Nunjucks component \`AlternateUrls()\` should print proper meta tag with url specified 1`] = `
"
      
      


<link rel='alternate' hreflang='en-US' href='https://kotsu.2bad.me/some/specific/url' >



    "
`;

exports[`Nunjucks component \`AlternateUrls()\` should print proper meta tags when locale is default for its language 1`] = `
"
      
      


<link rel='alternate' hreflang='en-US' href='https://kotsu.2bad.me/en/mockContext' >





<link rel='alternate' hreflang='en' href='https://kotsu.2bad.me/en/mockContext' >





    "
`;
